# Climate-Risk-and-Action-Planner

./: .gitignore  API_DOCUMENTATION.md  ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  ENHANCEMENTS_SUMMARY.md  INSTALLATION_REPORT.md  LICENSE  PRESENTATION.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  SETUP.md  docker-compose.yml  start-perfect.bat  start-perfect.sh  start.bat  start.sh  verify.bat
.github/workflows/: ci-cd.yml
backend/: .env.example  .env.production  app.py  pyproject.toml  requirements.txt
backend/models/: __init__.py  action_model.py  risk_model.py
backend/routes/: __init__.py  action_routes.py  climate_routes.py  footprint_routes.py  prediction_routes.py  risk_routes.py
backend/services/: __init__.py  climate_service.py  database.py
frontend/: .eslintrc.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ErrorBoundary.tsx  Loading.tsx  Navbar.tsx
frontend/src/pages/: ActionPlan.tsx  CarbonFootprint.tsx  Dashboard.tsx  Debug.tsx  Home.tsx  Predictions.tsx  RiskAssessment.tsx
frontend/src/services/: adapters.ts  api.ts
frontend/src/store/: useStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: errorHandler.ts
